# Snowman

./: .gitignore  CMakeLists.txt  README.md  Readme.md  geometry.h  model.cpp  model.h  tinyraytracer.cpp
include/: color.hpp  vec3.hpp
src/: geometry.h  geometry.hpp  main.cpp  main.hpp  utils.hpp
